"""
Avatar database model for SmartFit.

This module defines the Avatar entity used to store information
about personalized digital avatars generated by the SmartFit system.

The Avatar model corresponds to the Avatars entity defined in the
SmartFit database design.

An avatar is generated using body measurements estimated from
a user's uploaded body video.
"""

import uuid
from datetime import datetime, timezone

from sqlalchemy import DateTime, ForeignKey, Text
from sqlalchemy.dialects.postgresql import UUID
from sqlalchemy.orm import Mapped, mapped_column, relationship

from app.db.database import Base


class Avatar(Base):
    """
    SQLAlchemy model representing a personalized digital avatar.

    Each Avatar is generated from exactly one BodyMeasurement.
    """

    __tablename__ = "avatars"

    # --------------------------------------------------------
    # Primary Key
    # --------------------------------------------------------

    avatar_id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True),
        primary_key=True,
        default=uuid.uuid4,
    )

    # --------------------------------------------------------
    # Measurement Foreign Key
    # --------------------------------------------------------

    # Store the UUID of the body measurement record used
    # to generate this avatar.
    #
    # ON DELETE CASCADE ensures that the avatar is removed
    # when its source measurement is deleted.
    measurement_id: Mapped[uuid.UUID] = mapped_column(
        UUID(as_uuid=True),
        ForeignKey(
            "body_measurements.measurement_id",
            ondelete="CASCADE",
        ),
        unique=True,
        nullable=False,
    )

    # --------------------------------------------------------
    # Avatar Information
    # --------------------------------------------------------

    # Path or location of the generated avatar file.
    avatar_path: Mapped[str] = mapped_column(
        Text,
        nullable=False,
    )

    # Date and time when the avatar was generated.
    created_at: Mapped[datetime] = mapped_column(
        DateTime(timezone=True),
        default=lambda: datetime.now(timezone.utc),
        nullable=False,
    )

    # --------------------------------------------------------
    # Relationships
    # --------------------------------------------------------

    # Each avatar is generated from one body measurement.
    measurement = relationship(
        "BodyMeasurement",
        back_populates="avatar",
    )